Fixed responsiveness of Application pages, and also fixed footer off bottom of page on certain pages (on mobile).

--- a/css/applications.css
+++ b/css/applications.css
@@ -26,7 +26,7 @@ body, .wb_sbg { min-width: 320px; min-height: 854px; }
 #wb_element_instance33 p:last-child { margin-bottom: 0; }
 #wb_element_instance33 { top: 40px; left: 130px; min-width: 160px; width: 160px; min-height: 35px; height: 35px; display: block; z-index: 260; }
 #wb_element_instance34 p:last-child { margin-bottom: 0; }
-#wb_element_instance34 { top: 20px; left: 10px; min-width: 190px; width: 190px; min-height: 30px; height: 30px; display: block; z-index: 267; }
+#wb_element_instance34 { top: -25px; left: 10px; min-width: 190px; width: 190px; min-height: 30px; height: 30px; display: block; z-index: 267; }
 #wb_element_instance35 p:last-child { margin-bottom: 0; }
 #wb_element_instance35 { top: 20px; left: 10px; min-width: 305px; width: 305px; min-height: 35px; height: 35px; display: block; z-index: 89; }
 #wb_element_instance36 p:last-child { margin-bottom: 0; }
